# pdf-viewer

./: .clang-tidy  .gitignore  .qmlls.ini  CMakeLists.txt  Makefile  README.md  flake.nix  justfile  test.xml
.github/workflows/: build.yml
src/: CMakeLists.txt  main.cc
src/ch/: CMakeLists.txt
src/ch/brel/: CMakeLists.txt  app.cc  app.h  pdfimageprovider.cc  pdfimageprovider.h  pdfpagemodel.cc  pdfpagemodel.h  pdfviewer.cc  pdfviewer.h
src/ch/brel/atoms/: PrimaryButton.qml
src/ch/brel/molecules/: BackHomeMenu.qml
src/ch/brel/pdf-viewer-ui/: main.qml
src/ch/brel/theme/: .qmlls.ini  CMakeLists.txt  theme.cc  theme.h
tests/: CMakeLists.txt
tests/tst-pdf-model/: CMakeLists.txt  tst-pdf-model.cc
